# Pathtracer

./: CMakeLists.txt  Doxyfile  Question5-3.txt  README.md  setup_vs2013.bat  setup_vs2015.bat  setup_vs2017.bat
contrib/lib/: libpng16.lib  yaml-cpp.lib  zlib.lib
src/: CMakeLists.txt  bbox.h  bvh.cpp  bvh.h  cameras.h  color.h  common.h  debug.cpp  debug.h  float2.h  float3.h  float4.h  hash.h  hash_grid.h  image.cpp  image.h  intersect.h  lights.h  main.cpp  materials.h  options.h  random.h  render.h  samplers.h  scene.cpp  scene.h  textures.h
src/algorithms/: Matrix4x4.cpp  Matrix4x4.h  render_debug.cpp  render_ppm.cpp  render_pt.cpp
src/core/: assert.h  macros.h  matrix.cpp  matrix.h  point.cpp  point.h  rtfloat4.cpp  rtfloat4.h  scalar.cpp  scalar.h  util.h  vector.cpp  vector.h  windowsdefines.h
test/cornell_box/: cornell_box.yml  cornell_box_glossy.yml  cornell_box_water.yml
